// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component 1`] = `
<tr
  class="roleAssignment"
>
  <td>
    Role Name 5
  </td>
  <td>
    Sulu
  </td>
  <td>
    <div
      class="select"
    >
      <button
        class="displayValue default"
        type="button"
      >
        <div
          aria-label="de"
          class="croppedText"
          title="de"
        >
          <div
            aria-hidden="true"
            class="front"
          >
            d
          </div>
          <div
            aria-hidden="true"
            class="back"
          >
            <span>
              e
            </span>
          </div>
          <div
            class="whole"
          >
            de
          </div>
        </div>
        <span
          aria-label="su-angle-down"
          class="su-angle-down toggle"
        />
      </button>
    </div>
  </td>
</tr>
`;

exports[`Render component in disabled state 1`] = `
<tr
  class="roleAssignment disabled"
>
  <td>
    Role Name 5
  </td>
  <td>
    Sulu
  </td>
  <td>
    <div
      class="select"
    >
      <button
        class="displayValue default"
        disabled=""
        type="button"
      >
        <div
          aria-label="de"
          class="croppedText"
          title="de"
        >
          <div
            aria-hidden="true"
            class="front"
          >
            d
          </div>
          <div
            aria-hidden="true"
            class="back"
          >
            <span>
              e
            </span>
          </div>
          <div
            class="whole"
          >
            de
          </div>
        </div>
        <span
          aria-label="su-angle-down"
          class="su-angle-down toggle"
        />
      </button>
    </div>
  </td>
</tr>
`;
